# XUnity-fox-s-LLMTranslateGUI

./: LICENSE  README.md  README_US.md
XUnity-Moil的LLMTranslateGUI-C++/: CMakeLists.txt  logo.rc
XUnity-Moil的LLMTranslateGUI-C++/src/: ConfigManager.cpp  ConfigManager.h  GlossaryManager.h  MainWindow.cpp  MainWindow.h  RegexManager.h  TokenManager.cpp  TokenManager.h  TranslationServer.cpp  TranslationServer.h  main.cpp
XUnity-Moil的LLMTranslateGUI-Python/: XUnity-Moil的LLMTranslateGUI.py  XUnity-fox's LLMTranslateGUI.py
